--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,4 +1,6 @@
 .header {
+  display: flex;
+  justify-content: space-between;
   padding-top: 45px;
   padding-bottom: 41px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
