--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,14 @@
 @import url(./blocks/popup/__image/popup__image.css);
 @import url(./blocks/popup/__zoom-image/popup__zoom-image.css);
 @import url(./blocks/popup/__caption/popup__caption.css);
+@import url(./blocks/register/register.css);
+@import url(./blocks/register/__fieldset/register__fieldset.css);
+@import url(./blocks/register/__title/register__title.css);
+@import url(./blocks/register/__form-field/register__form-field.css);
+@import url(./blocks/register/__input/register__input.css);
+@import url(./blocks/register/__submit-btn/register__submit-btn.css);
+@import url(./blocks/register/__question-container/register__question-container.css);
+@import url(./blocks/register/__question/register__question.css);
+@import url(./blocks/register/__link/register__link.css);
+
+
