--- a/src/blocks/register/register.css
+++ b/src/blocks/register/register.css
@@ -1,12 +1,12 @@
 .register {
     max-width: 358px;
-    margin: 60px auto 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 60px 0 80px;
 }
 
 @media (max-width: 720px) {
     .register {
-      margin-top: 41px;
+      padding: 40px 0;
       width: calc(100% - 30px * 2);
     }
   }
