--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
 @import url(./blocks/popup/_zoom/popup_zoom.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__container/_type/popup__container_type_auth.css);
 @import url(./blocks/popup/__close-container/popup__close-container.css);
 @import url(./blocks/popup/__button-close/popup__button-close.css);
 @import url(./blocks/popup/__form/popup__form.css);
@@ -50,8 +51,10 @@
 @import url(./blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(./blocks/popup/__container-photo/popup__container-photo.css);
 @import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__image-auth/popup__image-auth.css);
 @import url(./blocks/popup/__zoom-image/popup__zoom-image.css);
 @import url(./blocks/popup/__caption/popup__caption.css);
+@import url(./blocks/popup/__caption/_type/popup__caption_type_auth.css);
 @import url(./blocks/register/register.css);
 @import url(./blocks/register/__fieldset/register__fieldset.css);
 @import url(./blocks/register/__title/register__title.css);
