--- a/src/blocks/popup/__submit/popup__submit.css
+++ b/src/blocks/popup/__submit/popup__submit.css
@@ -14,6 +14,10 @@
   cursor: pointer;
 }
 
+.popup__submit:hover {
+  opacity: 0.7;
+}
+
 @media (max-width: 581px) {
   .popup__submit {
     font-size: 14px;
